Update to JDK 21 SegmentScope has been replaced by Arena