@@ -2,8 +2,11 @@
 
 package org.purejava.appindicator;
 
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
 import java.lang.foreign.*;
-
+import static java.lang.foreign.ValueLayout.*;
 /**
  * {@snippet :
  * void (*GBusNameAppearedCallback)(struct _GDBusConnection* connection,char* name,char* name_owner,void* user_data);
@@ -12,14 +15,14 @@ import java.lang.foreign.*;
 public interface GBusNameAppearedCallback {
 
     void apply(java.lang.foreign.MemorySegment model, java.lang.foreign.MemorySegment path, java.lang.foreign.MemorySegment iter, java.lang.foreign.MemorySegment data);
-    static MemorySegment allocate(GBusNameAppearedCallback fi, SegmentScope scope) {
-        return RuntimeHelper.upcallStub(constants$583.GBusNameAppearedCallback_UP$MH, fi, constants$583.GBusNameAppearedCallback$FUNC, scope);
+    static MemorySegment allocate(GBusNameAppearedCallback fi, Arena scope) {
+        return RuntimeHelper.upcallStub(constants$907.const$0, fi, constants$42.const$1, scope);
     }
-    static GBusNameAppearedCallback ofAddress(MemorySegment addr, SegmentScope scope) {
-        MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+    static GBusNameAppearedCallback ofAddress(MemorySegment addr, Arena arena) {
+        MemorySegment symbol = addr.reinterpret(arena, null);
         return (java.lang.foreign.MemorySegment _model, java.lang.foreign.MemorySegment _path, java.lang.foreign.MemorySegment _iter, java.lang.foreign.MemorySegment _data) -> {
             try {
-                constants$583.GBusNameAppearedCallback_DOWN$MH.invokeExact(symbol, _model, _path, _iter, _data);
+                constants$259.const$4.invokeExact(symbol, _model, _path, _iter, _data);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
