@@ -2,8 +2,11 @@
 
 package org.purejava.appindicator;
 
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
 import java.lang.foreign.*;
-
+import static java.lang.foreign.ValueLayout.*;
 /**
  * {@snippet :
  * void (*GDataForeachFunc)(unsigned int key_id,void* data,void* user_data);
@@ -12,14 +15,14 @@ import java.lang.foreign.*;
 public interface GDataForeachFunc {
 
     void apply(int key_id, java.lang.foreign.MemorySegment data, java.lang.foreign.MemorySegment user_data);
-    static MemorySegment allocate(GDataForeachFunc fi, SegmentScope scope) {
-        return RuntimeHelper.upcallStub(constants$108.GDataForeachFunc_UP$MH, fi, constants$108.GDataForeachFunc$FUNC, scope);
+    static MemorySegment allocate(GDataForeachFunc fi, Arena scope) {
+        return RuntimeHelper.upcallStub(constants$178.const$2, fi, constants$127.const$3, scope);
     }
-    static GDataForeachFunc ofAddress(MemorySegment addr, SegmentScope scope) {
-        MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+    static GDataForeachFunc ofAddress(MemorySegment addr, Arena arena) {
+        MemorySegment symbol = addr.reinterpret(arena, null);
         return (int _key_id, java.lang.foreign.MemorySegment _data, java.lang.foreign.MemorySegment _user_data) -> {
             try {
-                constants$108.GDataForeachFunc_DOWN$MH.invokeExact(symbol, _key_id, _data, _user_data);
+                constants$127.const$5.invokeExact(symbol, _key_id, _data, _user_data);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
