@@ -2,8 +2,11 @@
 
 package org.purejava.appindicator;
 
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
 import java.lang.foreign.*;
-
+import static java.lang.foreign.ValueLayout.*;
 /**
  * {@snippet :
  * void (*GTypePluginCompleteInterfaceInfo)(struct _GTypePlugin* plugin,unsigned long instance_type,unsigned long interface_type,struct _GInterfaceInfo* info);
@@ -12,14 +15,14 @@ import java.lang.foreign.*;
 public interface GTypePluginCompleteInterfaceInfo {
 
     void apply(java.lang.foreign.MemorySegment plugin, long instance_type, long interface_type, java.lang.foreign.MemorySegment info);
-    static MemorySegment allocate(GTypePluginCompleteInterfaceInfo fi, SegmentScope scope) {
-        return RuntimeHelper.upcallStub(constants$459.GTypePluginCompleteInterfaceInfo_UP$MH, fi, constants$459.GTypePluginCompleteInterfaceInfo$FUNC, scope);
+    static MemorySegment allocate(GTypePluginCompleteInterfaceInfo fi, Arena scope) {
+        return RuntimeHelper.upcallStub(constants$680.const$2, fi, constants$94.const$1, scope);
     }
-    static GTypePluginCompleteInterfaceInfo ofAddress(MemorySegment addr, SegmentScope scope) {
-        MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+    static GTypePluginCompleteInterfaceInfo ofAddress(MemorySegment addr, Arena arena) {
+        MemorySegment symbol = addr.reinterpret(arena, null);
         return (java.lang.foreign.MemorySegment _plugin, long _instance_type, long _interface_type, java.lang.foreign.MemorySegment _info) -> {
             try {
-                constants$459.GTypePluginCompleteInterfaceInfo_DOWN$MH.invokeExact(symbol, _plugin, _instance_type, _interface_type, _info);
+                constants$680.const$3.invokeExact(symbol, _plugin, _instance_type, _interface_type, _info);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
