@@ -2,8 +2,11 @@
 
 package org.purejava.appindicator;
 
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
 import java.lang.foreign.*;
-
+import static java.lang.foreign.ValueLayout.*;
 /**
  * {@snippet :
  * int (*GtkTreeViewRowSeparatorFunc)(struct _GtkTreeModel* model,struct _GtkTreeIter* iter,void* data);
@@ -12,14 +15,14 @@ import java.lang.foreign.*;
 public interface GtkTreeViewRowSeparatorFunc {
 
     int apply(java.lang.foreign.MemorySegment a, java.lang.foreign.MemorySegment b, java.lang.foreign.MemorySegment user_data);
-    static MemorySegment allocate(GtkTreeViewRowSeparatorFunc fi, SegmentScope scope) {
-        return RuntimeHelper.upcallStub(constants$1464.GtkTreeViewRowSeparatorFunc_UP$MH, fi, constants$1464.GtkTreeViewRowSeparatorFunc$FUNC, scope);
+    static MemorySegment allocate(GtkTreeViewRowSeparatorFunc fi, Arena scope) {
+        return RuntimeHelper.upcallStub(constants$2474.const$3, fi, constants$12.const$2, scope);
     }
-    static GtkTreeViewRowSeparatorFunc ofAddress(MemorySegment addr, SegmentScope scope) {
-        MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+    static GtkTreeViewRowSeparatorFunc ofAddress(MemorySegment addr, Arena arena) {
+        MemorySegment symbol = addr.reinterpret(arena, null);
         return (java.lang.foreign.MemorySegment _a, java.lang.foreign.MemorySegment _b, java.lang.foreign.MemorySegment _user_data) -> {
             try {
-                return (int)constants$1464.GtkTreeViewRowSeparatorFunc_DOWN$MH.invokeExact(symbol, _a, _b, _user_data);
+                return (int)constants$12.const$4.invokeExact(symbol, _a, _b, _user_data);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
