@@ -4,86 +4,42 @@ package org.purejava.appindicator;
 
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
 import java.lang.foreign.*;
-
+import static java.lang.foreign.ValueLayout.*;
 /**
  * {@snippet :
  * struct _GConverterIface {
- *     GTypeInterface g_iface;
- *     GConverterResult (*convert)(GConverter*,void*,gsize,void*,gsize,GConverterFlags,gsize*,gsize*,GError**);
- *     void (*reset)(GConverter*);
+ *     struct _GTypeInterface g_iface;
+ *     enum GConverterResult (*convert)(struct _GConverter*,void*,unsigned long,void*,unsigned long,enum GConverterFlags,unsigned long*,unsigned long*,struct _GError**);
+ *     void (*reset)(struct _GConverter*);
  * };
  * }
  */
 public class _GConverterIface {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        MemoryLayout.structLayout(
-            Constants$root.C_LONG_LONG$LAYOUT.withName("g_type"),
-            Constants$root.C_LONG_LONG$LAYOUT.withName("g_instance_type")
-        ).withName("g_iface"),
-        Constants$root.C_POINTER$LAYOUT.withName("convert"),
-        Constants$root.C_POINTER$LAYOUT.withName("reset")
-    ).withName("_GConverterIface");
     public static MemoryLayout $LAYOUT() {
-        return _GConverterIface.$struct$LAYOUT;
+        return constants$802.const$5;
     }
     public static MemorySegment g_iface$slice(MemorySegment seg) {
         return seg.asSlice(0, 16);
     }
-    static final FunctionDescriptor convert$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_LONG_LONG$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_LONG_LONG$LAYOUT,
-        Constants$root.C_INT$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final FunctionDescriptor convert_UP$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_LONG_LONG$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_LONG_LONG$LAYOUT,
-        Constants$root.C_INT$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final MethodHandle convert_UP$MH = RuntimeHelper.upcallHandle(convert.class, "apply", _GConverterIface.convert_UP$FUNC);
-    static final FunctionDescriptor convert_DOWN$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_LONG_LONG$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_LONG_LONG$LAYOUT,
-        Constants$root.C_INT$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final MethodHandle convert_DOWN$MH = RuntimeHelper.downcallHandle(
-        _GConverterIface.convert_DOWN$FUNC
-    );
     /**
      * {@snippet :
- * GConverterResult (*convert)(GConverter*,void*,gsize,void*,gsize,GConverterFlags,gsize*,gsize*,GError**);
+ * enum GConverterResult (*convert)(struct _GConverter*,void*,unsigned long,void*,unsigned long,enum GConverterFlags,unsigned long*,unsigned long*,struct _GError**);
      * }
      */
     public interface convert {
 
         int apply(java.lang.foreign.MemorySegment _x0, java.lang.foreign.MemorySegment _x1, long _x2, java.lang.foreign.MemorySegment _x3, long _x4, int _x5, java.lang.foreign.MemorySegment _x6, java.lang.foreign.MemorySegment _x7, java.lang.foreign.MemorySegment _x8);
-        static MemorySegment allocate(convert fi, SegmentScope scope) {
-            return RuntimeHelper.upcallStub(_GConverterIface.convert_UP$MH, fi, _GConverterIface.convert$FUNC, scope);
+        static MemorySegment allocate(convert fi, Arena scope) {
+            return RuntimeHelper.upcallStub(constants$803.const$1, fi, constants$803.const$0, scope);
         }
-        static convert ofAddress(MemorySegment addr, SegmentScope scope) {
-            MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+        static convert ofAddress(MemorySegment addr, Arena arena) {
+            MemorySegment symbol = addr.reinterpret(arena, null);
             return (java.lang.foreign.MemorySegment __x0, java.lang.foreign.MemorySegment __x1, long __x2, java.lang.foreign.MemorySegment __x3, long __x4, int __x5, java.lang.foreign.MemorySegment __x6, java.lang.foreign.MemorySegment __x7, java.lang.foreign.MemorySegment __x8) -> {
                 try {
-                    return (int)_GConverterIface.convert_DOWN$MH.invokeExact(symbol, __x0, __x1, __x2, __x3, __x4, __x5, __x6, __x7, __x8);
+                    return (int)constants$803.const$2.invokeExact(symbol, __x0, __x1, __x2, __x3, __x4, __x5, __x6, __x7, __x8);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -91,66 +47,52 @@ public class _GConverterIface {
         }
     }
 
-    static final VarHandle convert$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("convert"));
     public static VarHandle convert$VH() {
-        return _GConverterIface.convert$VH;
+        return constants$803.const$3;
     }
     /**
      * Getter for field:
      * {@snippet :
-     * GConverterResult (*convert)(GConverter*,void*,gsize,void*,gsize,GConverterFlags,gsize*,gsize*,GError**);
+     * enum GConverterResult (*convert)(struct _GConverter*,void*,unsigned long,void*,unsigned long,enum GConverterFlags,unsigned long*,unsigned long*,struct _GError**);
      * }
      */
     public static MemorySegment convert$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_GConverterIface.convert$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$803.const$3.get(seg);
     }
     /**
      * Setter for field:
      * {@snippet :
-     * GConverterResult (*convert)(GConverter*,void*,gsize,void*,gsize,GConverterFlags,gsize*,gsize*,GError**);
+     * enum GConverterResult (*convert)(struct _GConverter*,void*,unsigned long,void*,unsigned long,enum GConverterFlags,unsigned long*,unsigned long*,struct _GError**);
      * }
      */
     public static void convert$set(MemorySegment seg, MemorySegment x) {
-        _GConverterIface.convert$VH.set(seg, x);
+        constants$803.const$3.set(seg, x);
     }
     public static MemorySegment convert$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_GConverterIface.convert$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$803.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void convert$set(MemorySegment seg, long index, MemorySegment x) {
-        _GConverterIface.convert$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$803.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    public static convert convert(MemorySegment segment, SegmentScope scope) {
+    public static convert convert(MemorySegment segment, Arena scope) {
         return convert.ofAddress(convert$get(segment), scope);
     }
-    static final FunctionDescriptor reset$FUNC = FunctionDescriptor.ofVoid(
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final FunctionDescriptor reset_UP$FUNC = FunctionDescriptor.ofVoid(
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final MethodHandle reset_UP$MH = RuntimeHelper.upcallHandle(reset.class, "apply", _GConverterIface.reset_UP$FUNC);
-    static final FunctionDescriptor reset_DOWN$FUNC = FunctionDescriptor.ofVoid(
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final MethodHandle reset_DOWN$MH = RuntimeHelper.downcallHandle(
-        _GConverterIface.reset_DOWN$FUNC
-    );
     /**
      * {@snippet :
- * void (*reset)(GConverter*);
+ * void (*reset)(struct _GConverter*);
      * }
      */
     public interface reset {
 
         void apply(java.lang.foreign.MemorySegment display);
-        static MemorySegment allocate(reset fi, SegmentScope scope) {
-            return RuntimeHelper.upcallStub(_GConverterIface.reset_UP$MH, fi, _GConverterIface.reset$FUNC, scope);
+        static MemorySegment allocate(reset fi, Arena scope) {
+            return RuntimeHelper.upcallStub(constants$803.const$4, fi, constants$13.const$1, scope);
         }
-        static reset ofAddress(MemorySegment addr, SegmentScope scope) {
-            MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+        static reset ofAddress(MemorySegment addr, Arena arena) {
+            MemorySegment symbol = addr.reinterpret(arena, null);
             return (java.lang.foreign.MemorySegment _display) -> {
                 try {
-                    _GConverterIface.reset_DOWN$MH.invokeExact(symbol, _display);
+                    constants$13.const$3.invokeExact(symbol, _display);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -158,35 +100,34 @@ public class _GConverterIface {
         }
     }
 
-    static final VarHandle reset$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("reset"));
     public static VarHandle reset$VH() {
-        return _GConverterIface.reset$VH;
+        return constants$803.const$5;
     }
     /**
      * Getter for field:
      * {@snippet :
-     * void (*reset)(GConverter*);
+     * void (*reset)(struct _GConverter*);
      * }
      */
     public static MemorySegment reset$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_GConverterIface.reset$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$803.const$5.get(seg);
     }
     /**
      * Setter for field:
      * {@snippet :
-     * void (*reset)(GConverter*);
+     * void (*reset)(struct _GConverter*);
      * }
      */
     public static void reset$set(MemorySegment seg, MemorySegment x) {
-        _GConverterIface.reset$VH.set(seg, x);
+        constants$803.const$5.set(seg, x);
     }
     public static MemorySegment reset$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_GConverterIface.reset$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$803.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void reset$set(MemorySegment seg, long index, MemorySegment x) {
-        _GConverterIface.reset$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$803.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    public static reset reset(MemorySegment segment, SegmentScope scope) {
+    public static reset reset(MemorySegment segment, Arena scope) {
         return reset.ofAddress(reset$get(segment), scope);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
@@ -194,7 +135,7 @@ public class _GConverterIface {
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
 }
 
 
