@@ -4,14 +4,15 @@ package org.purejava.appindicator;
 
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
 import java.lang.foreign.*;
-
+import static java.lang.foreign.ValueLayout.*;
 /**
  * {@snippet :
  * struct _GSocketListenerClass {
- *     GObjectClass parent_class;
- *     void (*changed)(GSocketListener*);
- *     void (*event)(GSocketListener*,GSocketListenerEvent,GSocket*);
+ *     struct _GObjectClass parent_class;
+ *     void (*changed)(struct _GSocketListener*);
+ *     void (*event)(struct _GSocketListener*,enum GSocketListenerEvent,struct _GSocket*);
  *     void (*_g_reserved2)();
  *     void (*_g_reserved3)();
  *     void (*_g_reserved4)();
@@ -22,69 +23,28 @@ import java.lang.foreign.*;
  */
 public class _GSocketListenerClass {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        MemoryLayout.structLayout(
-            MemoryLayout.structLayout(
-                Constants$root.C_LONG_LONG$LAYOUT.withName("g_type")
-            ).withName("g_type_class"),
-            Constants$root.C_POINTER$LAYOUT.withName("construct_properties"),
-            Constants$root.C_POINTER$LAYOUT.withName("constructor"),
-            Constants$root.C_POINTER$LAYOUT.withName("set_property"),
-            Constants$root.C_POINTER$LAYOUT.withName("get_property"),
-            Constants$root.C_POINTER$LAYOUT.withName("dispose"),
-            Constants$root.C_POINTER$LAYOUT.withName("finalize"),
-            Constants$root.C_POINTER$LAYOUT.withName("dispatch_properties_changed"),
-            Constants$root.C_POINTER$LAYOUT.withName("notify"),
-            Constants$root.C_POINTER$LAYOUT.withName("constructed"),
-            Constants$root.C_LONG_LONG$LAYOUT.withName("flags"),
-            Constants$root.C_LONG_LONG$LAYOUT.withName("n_construct_properties"),
-            Constants$root.C_POINTER$LAYOUT.withName("pspecs"),
-            Constants$root.C_LONG_LONG$LAYOUT.withName("n_pspecs"),
-            MemoryLayout.sequenceLayout(3, Constants$root.C_POINTER$LAYOUT).withName("pdummy")
-        ).withName("parent_class"),
-        Constants$root.C_POINTER$LAYOUT.withName("changed"),
-        Constants$root.C_POINTER$LAYOUT.withName("event"),
-        Constants$root.C_POINTER$LAYOUT.withName("_g_reserved2"),
-        Constants$root.C_POINTER$LAYOUT.withName("_g_reserved3"),
-        Constants$root.C_POINTER$LAYOUT.withName("_g_reserved4"),
-        Constants$root.C_POINTER$LAYOUT.withName("_g_reserved5"),
-        Constants$root.C_POINTER$LAYOUT.withName("_g_reserved6")
-    ).withName("_GSocketListenerClass");
     public static MemoryLayout $LAYOUT() {
-        return _GSocketListenerClass.$struct$LAYOUT;
+        return constants$1311.const$0;
     }
     public static MemorySegment parent_class$slice(MemorySegment seg) {
         return seg.asSlice(0, 136);
     }
-    static final FunctionDescriptor changed$FUNC = FunctionDescriptor.ofVoid(
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final FunctionDescriptor changed_UP$FUNC = FunctionDescriptor.ofVoid(
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final MethodHandle changed_UP$MH = RuntimeHelper.upcallHandle(changed.class, "apply", _GSocketListenerClass.changed_UP$FUNC);
-    static final FunctionDescriptor changed_DOWN$FUNC = FunctionDescriptor.ofVoid(
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final MethodHandle changed_DOWN$MH = RuntimeHelper.downcallHandle(
-        _GSocketListenerClass.changed_DOWN$FUNC
-    );
     /**
      * {@snippet :
- * void (*changed)(GSocketListener*);
+ * void (*changed)(struct _GSocketListener*);
      * }
      */
     public interface changed {
 
         void apply(java.lang.foreign.MemorySegment display);
-        static MemorySegment allocate(changed fi, SegmentScope scope) {
-            return RuntimeHelper.upcallStub(_GSocketListenerClass.changed_UP$MH, fi, _GSocketListenerClass.changed$FUNC, scope);
+        static MemorySegment allocate(changed fi, Arena scope) {
+            return RuntimeHelper.upcallStub(constants$1311.const$1, fi, constants$13.const$1, scope);
         }
-        static changed ofAddress(MemorySegment addr, SegmentScope scope) {
-            MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+        static changed ofAddress(MemorySegment addr, Arena arena) {
+            MemorySegment symbol = addr.reinterpret(arena, null);
             return (java.lang.foreign.MemorySegment _display) -> {
                 try {
-                    _GSocketListenerClass.changed_DOWN$MH.invokeExact(symbol, _display);
+                    constants$13.const$3.invokeExact(symbol, _display);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -92,72 +52,52 @@ public class _GSocketListenerClass {
         }
     }
 
-    static final VarHandle changed$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("changed"));
     public static VarHandle changed$VH() {
-        return _GSocketListenerClass.changed$VH;
+        return constants$1311.const$2;
     }
     /**
      * Getter for field:
      * {@snippet :
-     * void (*changed)(GSocketListener*);
+     * void (*changed)(struct _GSocketListener*);
      * }
      */
     public static MemorySegment changed$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_GSocketListenerClass.changed$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1311.const$2.get(seg);
     }
     /**
      * Setter for field:
      * {@snippet :
-     * void (*changed)(GSocketListener*);
+     * void (*changed)(struct _GSocketListener*);
      * }
      */
     public static void changed$set(MemorySegment seg, MemorySegment x) {
-        _GSocketListenerClass.changed$VH.set(seg, x);
+        constants$1311.const$2.set(seg, x);
     }
     public static MemorySegment changed$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_GSocketListenerClass.changed$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1311.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void changed$set(MemorySegment seg, long index, MemorySegment x) {
-        _GSocketListenerClass.changed$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1311.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    public static changed changed(MemorySegment segment, SegmentScope scope) {
+    public static changed changed(MemorySegment segment, Arena scope) {
         return changed.ofAddress(changed$get(segment), scope);
     }
-    static final FunctionDescriptor event$FUNC = FunctionDescriptor.ofVoid(
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_INT$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final FunctionDescriptor event_UP$FUNC = FunctionDescriptor.ofVoid(
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_INT$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final MethodHandle event_UP$MH = RuntimeHelper.upcallHandle(event.class, "apply", _GSocketListenerClass.event_UP$FUNC);
-    static final FunctionDescriptor event_DOWN$FUNC = FunctionDescriptor.ofVoid(
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_INT$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final MethodHandle event_DOWN$MH = RuntimeHelper.downcallHandle(
-        _GSocketListenerClass.event_DOWN$FUNC
-    );
     /**
      * {@snippet :
- * void (*event)(GSocketListener*,GSocketListenerEvent,GSocket*);
+ * void (*event)(struct _GSocketListener*,enum GSocketListenerEvent,struct _GSocket*);
      * }
      */
     public interface event {
 
         void apply(java.lang.foreign.MemorySegment _x0, int _x1, java.lang.foreign.MemorySegment _x2);
-        static MemorySegment allocate(event fi, SegmentScope scope) {
-            return RuntimeHelper.upcallStub(_GSocketListenerClass.event_UP$MH, fi, _GSocketListenerClass.event$FUNC, scope);
+        static MemorySegment allocate(event fi, Arena scope) {
+            return RuntimeHelper.upcallStub(constants$1311.const$3, fi, constants$42.const$4, scope);
         }
-        static event ofAddress(MemorySegment addr, SegmentScope scope) {
-            MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+        static event ofAddress(MemorySegment addr, Arena arena) {
+            MemorySegment symbol = addr.reinterpret(arena, null);
             return (java.lang.foreign.MemorySegment __x0, int __x1, java.lang.foreign.MemorySegment __x2) -> {
                 try {
-                    _GSocketListenerClass.event_DOWN$MH.invokeExact(symbol, __x0, __x1, __x2);
+                    constants$625.const$2.invokeExact(symbol, __x0, __x1, __x2);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -165,44 +105,36 @@ public class _GSocketListenerClass {
         }
     }
 
-    static final VarHandle event$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("event"));
     public static VarHandle event$VH() {
-        return _GSocketListenerClass.event$VH;
+        return constants$1311.const$4;
     }
     /**
      * Getter for field:
      * {@snippet :
-     * void (*event)(GSocketListener*,GSocketListenerEvent,GSocket*);
+     * void (*event)(struct _GSocketListener*,enum GSocketListenerEvent,struct _GSocket*);
      * }
      */
     public static MemorySegment event$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_GSocketListenerClass.event$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1311.const$4.get(seg);
     }
     /**
      * Setter for field:
      * {@snippet :
-     * void (*event)(GSocketListener*,GSocketListenerEvent,GSocket*);
+     * void (*event)(struct _GSocketListener*,enum GSocketListenerEvent,struct _GSocket*);
      * }
      */
     public static void event$set(MemorySegment seg, MemorySegment x) {
-        _GSocketListenerClass.event$VH.set(seg, x);
+        constants$1311.const$4.set(seg, x);
     }
     public static MemorySegment event$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_GSocketListenerClass.event$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1311.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void event$set(MemorySegment seg, long index, MemorySegment x) {
-        _GSocketListenerClass.event$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1311.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    public static event event(MemorySegment segment, SegmentScope scope) {
+    public static event event(MemorySegment segment, Arena scope) {
         return event.ofAddress(event$get(segment), scope);
     }
-    static final FunctionDescriptor _g_reserved2$FUNC = FunctionDescriptor.ofVoid();
-    static final FunctionDescriptor _g_reserved2_UP$FUNC = FunctionDescriptor.ofVoid();
-    static final MethodHandle _g_reserved2_UP$MH = RuntimeHelper.upcallHandle(_g_reserved2.class, "apply", _GSocketListenerClass._g_reserved2_UP$FUNC);
-    static final FunctionDescriptor _g_reserved2_DOWN$FUNC = FunctionDescriptor.ofVoid();
-    static final MethodHandle _g_reserved2_DOWN$MH = RuntimeHelper.downcallHandle(
-        _GSocketListenerClass._g_reserved2_DOWN$FUNC
-    );
     /**
      * {@snippet :
  * void (*_g_reserved2)();
@@ -211,14 +143,14 @@ public class _GSocketListenerClass {
     public interface _g_reserved2 {
 
         void apply();
-        static MemorySegment allocate(_g_reserved2 fi, SegmentScope scope) {
-            return RuntimeHelper.upcallStub(_GSocketListenerClass._g_reserved2_UP$MH, fi, _GSocketListenerClass._g_reserved2$FUNC, scope);
+        static MemorySegment allocate(_g_reserved2 fi, Arena scope) {
+            return RuntimeHelper.upcallStub(constants$1311.const$5, fi, constants$7.const$5, scope);
         }
-        static _g_reserved2 ofAddress(MemorySegment addr, SegmentScope scope) {
-            MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+        static _g_reserved2 ofAddress(MemorySegment addr, Arena arena) {
+            MemorySegment symbol = addr.reinterpret(arena, null);
             return () -> {
                 try {
-                    _GSocketListenerClass._g_reserved2_DOWN$MH.invokeExact(symbol);
+                    constants$64.const$1.invokeExact(symbol);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -226,9 +158,8 @@ public class _GSocketListenerClass {
         }
     }
 
-    static final VarHandle _g_reserved2$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_g_reserved2"));
     public static VarHandle _g_reserved2$VH() {
-        return _GSocketListenerClass._g_reserved2$VH;
+        return constants$1312.const$0;
     }
     /**
      * Getter for field:
@@ -237,7 +168,7 @@ public class _GSocketListenerClass {
      * }
      */
     public static MemorySegment _g_reserved2$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_GSocketListenerClass._g_reserved2$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1312.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -246,24 +177,17 @@ public class _GSocketListenerClass {
      * }
      */
     public static void _g_reserved2$set(MemorySegment seg, MemorySegment x) {
-        _GSocketListenerClass._g_reserved2$VH.set(seg, x);
+        constants$1312.const$0.set(seg, x);
     }
     public static MemorySegment _g_reserved2$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_GSocketListenerClass._g_reserved2$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1312.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void _g_reserved2$set(MemorySegment seg, long index, MemorySegment x) {
-        _GSocketListenerClass._g_reserved2$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1312.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    public static _g_reserved2 _g_reserved2(MemorySegment segment, SegmentScope scope) {
+    public static _g_reserved2 _g_reserved2(MemorySegment segment, Arena scope) {
         return _g_reserved2.ofAddress(_g_reserved2$get(segment), scope);
     }
-    static final FunctionDescriptor _g_reserved3$FUNC = FunctionDescriptor.ofVoid();
-    static final FunctionDescriptor _g_reserved3_UP$FUNC = FunctionDescriptor.ofVoid();
-    static final MethodHandle _g_reserved3_UP$MH = RuntimeHelper.upcallHandle(_g_reserved3.class, "apply", _GSocketListenerClass._g_reserved3_UP$FUNC);
-    static final FunctionDescriptor _g_reserved3_DOWN$FUNC = FunctionDescriptor.ofVoid();
-    static final MethodHandle _g_reserved3_DOWN$MH = RuntimeHelper.downcallHandle(
-        _GSocketListenerClass._g_reserved3_DOWN$FUNC
-    );
     /**
      * {@snippet :
  * void (*_g_reserved3)();
@@ -272,14 +196,14 @@ public class _GSocketListenerClass {
     public interface _g_reserved3 {
 
         void apply();
-        static MemorySegment allocate(_g_reserved3 fi, SegmentScope scope) {
-            return RuntimeHelper.upcallStub(_GSocketListenerClass._g_reserved3_UP$MH, fi, _GSocketListenerClass._g_reserved3$FUNC, scope);
+        static MemorySegment allocate(_g_reserved3 fi, Arena scope) {
+            return RuntimeHelper.upcallStub(constants$1312.const$1, fi, constants$7.const$5, scope);
         }
-        static _g_reserved3 ofAddress(MemorySegment addr, SegmentScope scope) {
-            MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+        static _g_reserved3 ofAddress(MemorySegment addr, Arena arena) {
+            MemorySegment symbol = addr.reinterpret(arena, null);
             return () -> {
                 try {
-                    _GSocketListenerClass._g_reserved3_DOWN$MH.invokeExact(symbol);
+                    constants$64.const$1.invokeExact(symbol);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -287,9 +211,8 @@ public class _GSocketListenerClass {
         }
     }
 
-    static final VarHandle _g_reserved3$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_g_reserved3"));
     public static VarHandle _g_reserved3$VH() {
-        return _GSocketListenerClass._g_reserved3$VH;
+        return constants$1312.const$2;
     }
     /**
      * Getter for field:
@@ -298,7 +221,7 @@ public class _GSocketListenerClass {
      * }
      */
     public static MemorySegment _g_reserved3$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_GSocketListenerClass._g_reserved3$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1312.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -307,24 +230,17 @@ public class _GSocketListenerClass {
      * }
      */
     public static void _g_reserved3$set(MemorySegment seg, MemorySegment x) {
-        _GSocketListenerClass._g_reserved3$VH.set(seg, x);
+        constants$1312.const$2.set(seg, x);
     }
     public static MemorySegment _g_reserved3$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_GSocketListenerClass._g_reserved3$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1312.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void _g_reserved3$set(MemorySegment seg, long index, MemorySegment x) {
-        _GSocketListenerClass._g_reserved3$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1312.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    public static _g_reserved3 _g_reserved3(MemorySegment segment, SegmentScope scope) {
+    public static _g_reserved3 _g_reserved3(MemorySegment segment, Arena scope) {
         return _g_reserved3.ofAddress(_g_reserved3$get(segment), scope);
     }
-    static final FunctionDescriptor _g_reserved4$FUNC = FunctionDescriptor.ofVoid();
-    static final FunctionDescriptor _g_reserved4_UP$FUNC = FunctionDescriptor.ofVoid();
-    static final MethodHandle _g_reserved4_UP$MH = RuntimeHelper.upcallHandle(_g_reserved4.class, "apply", _GSocketListenerClass._g_reserved4_UP$FUNC);
-    static final FunctionDescriptor _g_reserved4_DOWN$FUNC = FunctionDescriptor.ofVoid();
-    static final MethodHandle _g_reserved4_DOWN$MH = RuntimeHelper.downcallHandle(
-        _GSocketListenerClass._g_reserved4_DOWN$FUNC
-    );
     /**
      * {@snippet :
  * void (*_g_reserved4)();
@@ -333,14 +249,14 @@ public class _GSocketListenerClass {
     public interface _g_reserved4 {
 
         void apply();
-        static MemorySegment allocate(_g_reserved4 fi, SegmentScope scope) {
-            return RuntimeHelper.upcallStub(_GSocketListenerClass._g_reserved4_UP$MH, fi, _GSocketListenerClass._g_reserved4$FUNC, scope);
+        static MemorySegment allocate(_g_reserved4 fi, Arena scope) {
+            return RuntimeHelper.upcallStub(constants$1312.const$3, fi, constants$7.const$5, scope);
         }
-        static _g_reserved4 ofAddress(MemorySegment addr, SegmentScope scope) {
-            MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+        static _g_reserved4 ofAddress(MemorySegment addr, Arena arena) {
+            MemorySegment symbol = addr.reinterpret(arena, null);
             return () -> {
                 try {
-                    _GSocketListenerClass._g_reserved4_DOWN$MH.invokeExact(symbol);
+                    constants$64.const$1.invokeExact(symbol);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -348,9 +264,8 @@ public class _GSocketListenerClass {
         }
     }
 
-    static final VarHandle _g_reserved4$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_g_reserved4"));
     public static VarHandle _g_reserved4$VH() {
-        return _GSocketListenerClass._g_reserved4$VH;
+        return constants$1312.const$4;
     }
     /**
      * Getter for field:
@@ -359,7 +274,7 @@ public class _GSocketListenerClass {
      * }
      */
     public static MemorySegment _g_reserved4$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_GSocketListenerClass._g_reserved4$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1312.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -368,24 +283,17 @@ public class _GSocketListenerClass {
      * }
      */
     public static void _g_reserved4$set(MemorySegment seg, MemorySegment x) {
-        _GSocketListenerClass._g_reserved4$VH.set(seg, x);
+        constants$1312.const$4.set(seg, x);
     }
     public static MemorySegment _g_reserved4$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_GSocketListenerClass._g_reserved4$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1312.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void _g_reserved4$set(MemorySegment seg, long index, MemorySegment x) {
-        _GSocketListenerClass._g_reserved4$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1312.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    public static _g_reserved4 _g_reserved4(MemorySegment segment, SegmentScope scope) {
+    public static _g_reserved4 _g_reserved4(MemorySegment segment, Arena scope) {
         return _g_reserved4.ofAddress(_g_reserved4$get(segment), scope);
     }
-    static final FunctionDescriptor _g_reserved5$FUNC = FunctionDescriptor.ofVoid();
-    static final FunctionDescriptor _g_reserved5_UP$FUNC = FunctionDescriptor.ofVoid();
-    static final MethodHandle _g_reserved5_UP$MH = RuntimeHelper.upcallHandle(_g_reserved5.class, "apply", _GSocketListenerClass._g_reserved5_UP$FUNC);
-    static final FunctionDescriptor _g_reserved5_DOWN$FUNC = FunctionDescriptor.ofVoid();
-    static final MethodHandle _g_reserved5_DOWN$MH = RuntimeHelper.downcallHandle(
-        _GSocketListenerClass._g_reserved5_DOWN$FUNC
-    );
     /**
      * {@snippet :
  * void (*_g_reserved5)();
@@ -394,14 +302,14 @@ public class _GSocketListenerClass {
     public interface _g_reserved5 {
 
         void apply();
-        static MemorySegment allocate(_g_reserved5 fi, SegmentScope scope) {
-            return RuntimeHelper.upcallStub(_GSocketListenerClass._g_reserved5_UP$MH, fi, _GSocketListenerClass._g_reserved5$FUNC, scope);
+        static MemorySegment allocate(_g_reserved5 fi, Arena scope) {
+            return RuntimeHelper.upcallStub(constants$1312.const$5, fi, constants$7.const$5, scope);
         }
-        static _g_reserved5 ofAddress(MemorySegment addr, SegmentScope scope) {
-            MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+        static _g_reserved5 ofAddress(MemorySegment addr, Arena arena) {
+            MemorySegment symbol = addr.reinterpret(arena, null);
             return () -> {
                 try {
-                    _GSocketListenerClass._g_reserved5_DOWN$MH.invokeExact(symbol);
+                    constants$64.const$1.invokeExact(symbol);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -409,9 +317,8 @@ public class _GSocketListenerClass {
         }
     }
 
-    static final VarHandle _g_reserved5$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_g_reserved5"));
     public static VarHandle _g_reserved5$VH() {
-        return _GSocketListenerClass._g_reserved5$VH;
+        return constants$1313.const$0;
     }
     /**
      * Getter for field:
@@ -420,7 +327,7 @@ public class _GSocketListenerClass {
      * }
      */
     public static MemorySegment _g_reserved5$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_GSocketListenerClass._g_reserved5$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1313.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -429,24 +336,17 @@ public class _GSocketListenerClass {
      * }
      */
     public static void _g_reserved5$set(MemorySegment seg, MemorySegment x) {
-        _GSocketListenerClass._g_reserved5$VH.set(seg, x);
+        constants$1313.const$0.set(seg, x);
     }
     public static MemorySegment _g_reserved5$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_GSocketListenerClass._g_reserved5$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1313.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void _g_reserved5$set(MemorySegment seg, long index, MemorySegment x) {
-        _GSocketListenerClass._g_reserved5$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1313.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    public static _g_reserved5 _g_reserved5(MemorySegment segment, SegmentScope scope) {
+    public static _g_reserved5 _g_reserved5(MemorySegment segment, Arena scope) {
         return _g_reserved5.ofAddress(_g_reserved5$get(segment), scope);
     }
-    static final FunctionDescriptor _g_reserved6$FUNC = FunctionDescriptor.ofVoid();
-    static final FunctionDescriptor _g_reserved6_UP$FUNC = FunctionDescriptor.ofVoid();
-    static final MethodHandle _g_reserved6_UP$MH = RuntimeHelper.upcallHandle(_g_reserved6.class, "apply", _GSocketListenerClass._g_reserved6_UP$FUNC);
-    static final FunctionDescriptor _g_reserved6_DOWN$FUNC = FunctionDescriptor.ofVoid();
-    static final MethodHandle _g_reserved6_DOWN$MH = RuntimeHelper.downcallHandle(
-        _GSocketListenerClass._g_reserved6_DOWN$FUNC
-    );
     /**
      * {@snippet :
  * void (*_g_reserved6)();
@@ -455,14 +355,14 @@ public class _GSocketListenerClass {
     public interface _g_reserved6 {
 
         void apply();
-        static MemorySegment allocate(_g_reserved6 fi, SegmentScope scope) {
-            return RuntimeHelper.upcallStub(_GSocketListenerClass._g_reserved6_UP$MH, fi, _GSocketListenerClass._g_reserved6$FUNC, scope);
+        static MemorySegment allocate(_g_reserved6 fi, Arena scope) {
+            return RuntimeHelper.upcallStub(constants$1313.const$1, fi, constants$7.const$5, scope);
         }
-        static _g_reserved6 ofAddress(MemorySegment addr, SegmentScope scope) {
-            MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+        static _g_reserved6 ofAddress(MemorySegment addr, Arena arena) {
+            MemorySegment symbol = addr.reinterpret(arena, null);
             return () -> {
                 try {
-                    _GSocketListenerClass._g_reserved6_DOWN$MH.invokeExact(symbol);
+                    constants$64.const$1.invokeExact(symbol);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -470,9 +370,8 @@ public class _GSocketListenerClass {
         }
     }
 
-    static final VarHandle _g_reserved6$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_g_reserved6"));
     public static VarHandle _g_reserved6$VH() {
-        return _GSocketListenerClass._g_reserved6$VH;
+        return constants$1313.const$2;
     }
     /**
      * Getter for field:
@@ -481,7 +380,7 @@ public class _GSocketListenerClass {
      * }
      */
     public static MemorySegment _g_reserved6$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_GSocketListenerClass._g_reserved6$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1313.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -490,15 +389,15 @@ public class _GSocketListenerClass {
      * }
      */
     public static void _g_reserved6$set(MemorySegment seg, MemorySegment x) {
-        _GSocketListenerClass._g_reserved6$VH.set(seg, x);
+        constants$1313.const$2.set(seg, x);
     }
     public static MemorySegment _g_reserved6$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_GSocketListenerClass._g_reserved6$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1313.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void _g_reserved6$set(MemorySegment seg, long index, MemorySegment x) {
-        _GSocketListenerClass._g_reserved6$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1313.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    public static _g_reserved6 _g_reserved6(MemorySegment segment, SegmentScope scope) {
+    public static _g_reserved6 _g_reserved6(MemorySegment segment, Arena scope) {
         return _g_reserved6.ofAddress(_g_reserved6$get(segment), scope);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
@@ -506,7 +405,7 @@ public class _GSocketListenerClass {
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
 }
 
 
