@@ -2,76 +2,60 @@
 
 package org.purejava.appindicator;
 
+import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
 import java.lang.foreign.*;
-
+import static java.lang.foreign.ValueLayout.*;
 /**
  * {@snippet :
  * struct _GtkScale {
- *     GtkRange range;
- *     GtkScalePrivate* priv;
+ *     struct _GtkRange range;
+ *     struct _GtkScalePrivate* priv;
  * };
  * }
  */
 public class _GtkScale {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        MemoryLayout.structLayout(
-            MemoryLayout.structLayout(
-                MemoryLayout.structLayout(
-                    MemoryLayout.structLayout(
-                        Constants$root.C_POINTER$LAYOUT.withName("g_class")
-                    ).withName("g_type_instance"),
-                    Constants$root.C_INT$LAYOUT.withName("ref_count"),
-                    MemoryLayout.paddingLayout(32),
-                    Constants$root.C_POINTER$LAYOUT.withName("qdata")
-                ).withName("parent_instance"),
-                Constants$root.C_POINTER$LAYOUT.withName("priv")
-            ).withName("widget"),
-            Constants$root.C_POINTER$LAYOUT.withName("priv")
-        ).withName("range"),
-        Constants$root.C_POINTER$LAYOUT.withName("priv")
-    ).withName("_GtkScale");
     public static MemoryLayout $LAYOUT() {
-        return _GtkScale.$struct$LAYOUT;
+        return constants$3047.const$0;
     }
     public static MemorySegment range$slice(MemorySegment seg) {
         return seg.asSlice(0, 40);
     }
-    static final VarHandle priv$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("priv"));
     public static VarHandle priv$VH() {
-        return _GtkScale.priv$VH;
+        return constants$3047.const$1;
     }
     /**
      * Getter for field:
      * {@snippet :
-     * GtkScalePrivate* priv;
+     * struct _GtkScalePrivate* priv;
      * }
      */
     public static MemorySegment priv$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_GtkScale.priv$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$3047.const$1.get(seg);
     }
     /**
      * Setter for field:
      * {@snippet :
-     * GtkScalePrivate* priv;
+     * struct _GtkScalePrivate* priv;
      * }
      */
     public static void priv$set(MemorySegment seg, MemorySegment x) {
-        _GtkScale.priv$VH.set(seg, x);
+        constants$3047.const$1.set(seg, x);
     }
     public static MemorySegment priv$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_GtkScale.priv$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$3047.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void priv$set(MemorySegment seg, long index, MemorySegment x) {
-        _GtkScale.priv$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$3047.const$1.set(seg.asSlice(index*sizeof()), x);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
 }
 
 
