@@ -4,14 +4,15 @@ package org.purejava.appindicator;
 
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
 import java.lang.foreign.*;
-
+import static java.lang.foreign.ValueLayout.*;
 /**
  * {@snippet :
  * struct _GtkTreeModelFilterClass {
- *     GObjectClass parent_class;
- *     gboolean (*visible)(GtkTreeModelFilter*,GtkTreeModel*,GtkTreeIter*);
- *     void (*modify)(GtkTreeModelFilter*,GtkTreeModel*,GtkTreeIter*,GValue*,gint);
+ *     struct _GObjectClass parent_class;
+ *     int (*visible)(struct _GtkTreeModelFilter*,struct _GtkTreeModel*,struct _GtkTreeIter*);
+ *     void (*modify)(struct _GtkTreeModelFilter*,struct _GtkTreeModel*,struct _GtkTreeIter*,struct _GValue*,int);
  *     void (*_gtk_reserved1)();
  *     void (*_gtk_reserved2)();
  *     void (*_gtk_reserved3)();
@@ -21,74 +22,28 @@ import java.lang.foreign.*;
  */
 public class _GtkTreeModelFilterClass {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        MemoryLayout.structLayout(
-            MemoryLayout.structLayout(
-                Constants$root.C_LONG_LONG$LAYOUT.withName("g_type")
-            ).withName("g_type_class"),
-            Constants$root.C_POINTER$LAYOUT.withName("construct_properties"),
-            Constants$root.C_POINTER$LAYOUT.withName("constructor"),
-            Constants$root.C_POINTER$LAYOUT.withName("set_property"),
-            Constants$root.C_POINTER$LAYOUT.withName("get_property"),
-            Constants$root.C_POINTER$LAYOUT.withName("dispose"),
-            Constants$root.C_POINTER$LAYOUT.withName("finalize"),
-            Constants$root.C_POINTER$LAYOUT.withName("dispatch_properties_changed"),
-            Constants$root.C_POINTER$LAYOUT.withName("notify"),
-            Constants$root.C_POINTER$LAYOUT.withName("constructed"),
-            Constants$root.C_LONG_LONG$LAYOUT.withName("flags"),
-            Constants$root.C_LONG_LONG$LAYOUT.withName("n_construct_properties"),
-            Constants$root.C_POINTER$LAYOUT.withName("pspecs"),
-            Constants$root.C_LONG_LONG$LAYOUT.withName("n_pspecs"),
-            MemoryLayout.sequenceLayout(3, Constants$root.C_POINTER$LAYOUT).withName("pdummy")
-        ).withName("parent_class"),
-        Constants$root.C_POINTER$LAYOUT.withName("visible"),
-        Constants$root.C_POINTER$LAYOUT.withName("modify"),
-        Constants$root.C_POINTER$LAYOUT.withName("_gtk_reserved1"),
-        Constants$root.C_POINTER$LAYOUT.withName("_gtk_reserved2"),
-        Constants$root.C_POINTER$LAYOUT.withName("_gtk_reserved3"),
-        Constants$root.C_POINTER$LAYOUT.withName("_gtk_reserved4")
-    ).withName("_GtkTreeModelFilterClass");
     public static MemoryLayout $LAYOUT() {
-        return _GtkTreeModelFilterClass.$struct$LAYOUT;
+        return constants$2426.const$1;
     }
     public static MemorySegment parent_class$slice(MemorySegment seg) {
         return seg.asSlice(0, 136);
     }
-    static final FunctionDescriptor visible$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final FunctionDescriptor visible_UP$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final MethodHandle visible_UP$MH = RuntimeHelper.upcallHandle(visible.class, "apply", _GtkTreeModelFilterClass.visible_UP$FUNC);
-    static final FunctionDescriptor visible_DOWN$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final MethodHandle visible_DOWN$MH = RuntimeHelper.downcallHandle(
-        _GtkTreeModelFilterClass.visible_DOWN$FUNC
-    );
     /**
      * {@snippet :
- * gboolean (*visible)(GtkTreeModelFilter*,GtkTreeModel*,GtkTreeIter*);
+ * int (*visible)(struct _GtkTreeModelFilter*,struct _GtkTreeModel*,struct _GtkTreeIter*);
      * }
      */
     public interface visible {
 
-        int apply(java.lang.foreign.MemorySegment _x0, java.lang.foreign.MemorySegment _x1, java.lang.foreign.MemorySegment _x2);
-        static MemorySegment allocate(visible fi, SegmentScope scope) {
-            return RuntimeHelper.upcallStub(_GtkTreeModelFilterClass.visible_UP$MH, fi, _GtkTreeModelFilterClass.visible$FUNC, scope);
+        int apply(java.lang.foreign.MemorySegment a, java.lang.foreign.MemorySegment b, java.lang.foreign.MemorySegment user_data);
+        static MemorySegment allocate(visible fi, Arena scope) {
+            return RuntimeHelper.upcallStub(constants$2426.const$2, fi, constants$12.const$2, scope);
         }
-        static visible ofAddress(MemorySegment addr, SegmentScope scope) {
-            MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
-            return (java.lang.foreign.MemorySegment __x0, java.lang.foreign.MemorySegment __x1, java.lang.foreign.MemorySegment __x2) -> {
+        static visible ofAddress(MemorySegment addr, Arena arena) {
+            MemorySegment symbol = addr.reinterpret(arena, null);
+            return (java.lang.foreign.MemorySegment _a, java.lang.foreign.MemorySegment _b, java.lang.foreign.MemorySegment _user_data) -> {
                 try {
-                    return (int)_GtkTreeModelFilterClass.visible_DOWN$MH.invokeExact(symbol, __x0, __x1, __x2);
+                    return (int)constants$12.const$4.invokeExact(symbol, _a, _b, _user_data);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -96,78 +51,52 @@ public class _GtkTreeModelFilterClass {
         }
     }
 
-    static final VarHandle visible$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("visible"));
     public static VarHandle visible$VH() {
-        return _GtkTreeModelFilterClass.visible$VH;
+        return constants$2426.const$3;
     }
     /**
      * Getter for field:
      * {@snippet :
-     * gboolean (*visible)(GtkTreeModelFilter*,GtkTreeModel*,GtkTreeIter*);
+     * int (*visible)(struct _GtkTreeModelFilter*,struct _GtkTreeModel*,struct _GtkTreeIter*);
      * }
      */
     public static MemorySegment visible$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_GtkTreeModelFilterClass.visible$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$2426.const$3.get(seg);
     }
     /**
      * Setter for field:
      * {@snippet :
-     * gboolean (*visible)(GtkTreeModelFilter*,GtkTreeModel*,GtkTreeIter*);
+     * int (*visible)(struct _GtkTreeModelFilter*,struct _GtkTreeModel*,struct _GtkTreeIter*);
      * }
      */
     public static void visible$set(MemorySegment seg, MemorySegment x) {
-        _GtkTreeModelFilterClass.visible$VH.set(seg, x);
+        constants$2426.const$3.set(seg, x);
     }
     public static MemorySegment visible$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_GtkTreeModelFilterClass.visible$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$2426.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void visible$set(MemorySegment seg, long index, MemorySegment x) {
-        _GtkTreeModelFilterClass.visible$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$2426.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    public static visible visible(MemorySegment segment, SegmentScope scope) {
+    public static visible visible(MemorySegment segment, Arena scope) {
         return visible.ofAddress(visible$get(segment), scope);
     }
-    static final FunctionDescriptor modify$FUNC = FunctionDescriptor.ofVoid(
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_INT$LAYOUT
-    );
-    static final FunctionDescriptor modify_UP$FUNC = FunctionDescriptor.ofVoid(
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_INT$LAYOUT
-    );
-    static final MethodHandle modify_UP$MH = RuntimeHelper.upcallHandle(modify.class, "apply", _GtkTreeModelFilterClass.modify_UP$FUNC);
-    static final FunctionDescriptor modify_DOWN$FUNC = FunctionDescriptor.ofVoid(
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_INT$LAYOUT
-    );
-    static final MethodHandle modify_DOWN$MH = RuntimeHelper.downcallHandle(
-        _GtkTreeModelFilterClass.modify_DOWN$FUNC
-    );
     /**
      * {@snippet :
- * void (*modify)(GtkTreeModelFilter*,GtkTreeModel*,GtkTreeIter*,GValue*,gint);
+ * void (*modify)(struct _GtkTreeModelFilter*,struct _GtkTreeModel*,struct _GtkTreeIter*,struct _GValue*,int);
      * }
      */
     public interface modify {
 
         void apply(java.lang.foreign.MemorySegment _x0, java.lang.foreign.MemorySegment _x1, java.lang.foreign.MemorySegment _x2, java.lang.foreign.MemorySegment _x3, int _x4);
-        static MemorySegment allocate(modify fi, SegmentScope scope) {
-            return RuntimeHelper.upcallStub(_GtkTreeModelFilterClass.modify_UP$MH, fi, _GtkTreeModelFilterClass.modify$FUNC, scope);
+        static MemorySegment allocate(modify fi, Arena scope) {
+            return RuntimeHelper.upcallStub(constants$2426.const$4, fi, constants$646.const$4, scope);
         }
-        static modify ofAddress(MemorySegment addr, SegmentScope scope) {
-            MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+        static modify ofAddress(MemorySegment addr, Arena arena) {
+            MemorySegment symbol = addr.reinterpret(arena, null);
             return (java.lang.foreign.MemorySegment __x0, java.lang.foreign.MemorySegment __x1, java.lang.foreign.MemorySegment __x2, java.lang.foreign.MemorySegment __x3, int __x4) -> {
                 try {
-                    _GtkTreeModelFilterClass.modify_DOWN$MH.invokeExact(symbol, __x0, __x1, __x2, __x3, __x4);
+                    constants$1174.const$4.invokeExact(symbol, __x0, __x1, __x2, __x3, __x4);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -175,44 +104,36 @@ public class _GtkTreeModelFilterClass {
         }
     }
 
-    static final VarHandle modify$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("modify"));
     public static VarHandle modify$VH() {
-        return _GtkTreeModelFilterClass.modify$VH;
+        return constants$2426.const$5;
     }
     /**
      * Getter for field:
      * {@snippet :
-     * void (*modify)(GtkTreeModelFilter*,GtkTreeModel*,GtkTreeIter*,GValue*,gint);
+     * void (*modify)(struct _GtkTreeModelFilter*,struct _GtkTreeModel*,struct _GtkTreeIter*,struct _GValue*,int);
      * }
      */
     public static MemorySegment modify$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_GtkTreeModelFilterClass.modify$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$2426.const$5.get(seg);
     }
     /**
      * Setter for field:
      * {@snippet :
-     * void (*modify)(GtkTreeModelFilter*,GtkTreeModel*,GtkTreeIter*,GValue*,gint);
+     * void (*modify)(struct _GtkTreeModelFilter*,struct _GtkTreeModel*,struct _GtkTreeIter*,struct _GValue*,int);
      * }
      */
     public static void modify$set(MemorySegment seg, MemorySegment x) {
-        _GtkTreeModelFilterClass.modify$VH.set(seg, x);
+        constants$2426.const$5.set(seg, x);
     }
     public static MemorySegment modify$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_GtkTreeModelFilterClass.modify$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$2426.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void modify$set(MemorySegment seg, long index, MemorySegment x) {
-        _GtkTreeModelFilterClass.modify$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$2426.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    public static modify modify(MemorySegment segment, SegmentScope scope) {
+    public static modify modify(MemorySegment segment, Arena scope) {
         return modify.ofAddress(modify$get(segment), scope);
     }
-    static final FunctionDescriptor _gtk_reserved1$FUNC = FunctionDescriptor.ofVoid();
-    static final FunctionDescriptor _gtk_reserved1_UP$FUNC = FunctionDescriptor.ofVoid();
-    static final MethodHandle _gtk_reserved1_UP$MH = RuntimeHelper.upcallHandle(_gtk_reserved1.class, "apply", _GtkTreeModelFilterClass._gtk_reserved1_UP$FUNC);
-    static final FunctionDescriptor _gtk_reserved1_DOWN$FUNC = FunctionDescriptor.ofVoid();
-    static final MethodHandle _gtk_reserved1_DOWN$MH = RuntimeHelper.downcallHandle(
-        _GtkTreeModelFilterClass._gtk_reserved1_DOWN$FUNC
-    );
     /**
      * {@snippet :
  * void (*_gtk_reserved1)();
@@ -221,14 +142,14 @@ public class _GtkTreeModelFilterClass {
     public interface _gtk_reserved1 {
 
         void apply();
-        static MemorySegment allocate(_gtk_reserved1 fi, SegmentScope scope) {
-            return RuntimeHelper.upcallStub(_GtkTreeModelFilterClass._gtk_reserved1_UP$MH, fi, _GtkTreeModelFilterClass._gtk_reserved1$FUNC, scope);
+        static MemorySegment allocate(_gtk_reserved1 fi, Arena scope) {
+            return RuntimeHelper.upcallStub(constants$2427.const$0, fi, constants$7.const$5, scope);
         }
-        static _gtk_reserved1 ofAddress(MemorySegment addr, SegmentScope scope) {
-            MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+        static _gtk_reserved1 ofAddress(MemorySegment addr, Arena arena) {
+            MemorySegment symbol = addr.reinterpret(arena, null);
             return () -> {
                 try {
-                    _GtkTreeModelFilterClass._gtk_reserved1_DOWN$MH.invokeExact(symbol);
+                    constants$64.const$1.invokeExact(symbol);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -236,9 +157,8 @@ public class _GtkTreeModelFilterClass {
         }
     }
 
-    static final VarHandle _gtk_reserved1$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_gtk_reserved1"));
     public static VarHandle _gtk_reserved1$VH() {
-        return _GtkTreeModelFilterClass._gtk_reserved1$VH;
+        return constants$2427.const$1;
     }
     /**
      * Getter for field:
@@ -247,7 +167,7 @@ public class _GtkTreeModelFilterClass {
      * }
      */
     public static MemorySegment _gtk_reserved1$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_GtkTreeModelFilterClass._gtk_reserved1$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$2427.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -256,24 +176,17 @@ public class _GtkTreeModelFilterClass {
      * }
      */
     public static void _gtk_reserved1$set(MemorySegment seg, MemorySegment x) {
-        _GtkTreeModelFilterClass._gtk_reserved1$VH.set(seg, x);
+        constants$2427.const$1.set(seg, x);
     }
     public static MemorySegment _gtk_reserved1$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_GtkTreeModelFilterClass._gtk_reserved1$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$2427.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void _gtk_reserved1$set(MemorySegment seg, long index, MemorySegment x) {
-        _GtkTreeModelFilterClass._gtk_reserved1$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$2427.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    public static _gtk_reserved1 _gtk_reserved1(MemorySegment segment, SegmentScope scope) {
+    public static _gtk_reserved1 _gtk_reserved1(MemorySegment segment, Arena scope) {
         return _gtk_reserved1.ofAddress(_gtk_reserved1$get(segment), scope);
     }
-    static final FunctionDescriptor _gtk_reserved2$FUNC = FunctionDescriptor.ofVoid();
-    static final FunctionDescriptor _gtk_reserved2_UP$FUNC = FunctionDescriptor.ofVoid();
-    static final MethodHandle _gtk_reserved2_UP$MH = RuntimeHelper.upcallHandle(_gtk_reserved2.class, "apply", _GtkTreeModelFilterClass._gtk_reserved2_UP$FUNC);
-    static final FunctionDescriptor _gtk_reserved2_DOWN$FUNC = FunctionDescriptor.ofVoid();
-    static final MethodHandle _gtk_reserved2_DOWN$MH = RuntimeHelper.downcallHandle(
-        _GtkTreeModelFilterClass._gtk_reserved2_DOWN$FUNC
-    );
     /**
      * {@snippet :
  * void (*_gtk_reserved2)();
@@ -282,14 +195,14 @@ public class _GtkTreeModelFilterClass {
     public interface _gtk_reserved2 {
 
         void apply();
-        static MemorySegment allocate(_gtk_reserved2 fi, SegmentScope scope) {
-            return RuntimeHelper.upcallStub(_GtkTreeModelFilterClass._gtk_reserved2_UP$MH, fi, _GtkTreeModelFilterClass._gtk_reserved2$FUNC, scope);
+        static MemorySegment allocate(_gtk_reserved2 fi, Arena scope) {
+            return RuntimeHelper.upcallStub(constants$2427.const$2, fi, constants$7.const$5, scope);
         }
-        static _gtk_reserved2 ofAddress(MemorySegment addr, SegmentScope scope) {
-            MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+        static _gtk_reserved2 ofAddress(MemorySegment addr, Arena arena) {
+            MemorySegment symbol = addr.reinterpret(arena, null);
             return () -> {
                 try {
-                    _GtkTreeModelFilterClass._gtk_reserved2_DOWN$MH.invokeExact(symbol);
+                    constants$64.const$1.invokeExact(symbol);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -297,9 +210,8 @@ public class _GtkTreeModelFilterClass {
         }
     }
 
-    static final VarHandle _gtk_reserved2$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_gtk_reserved2"));
     public static VarHandle _gtk_reserved2$VH() {
-        return _GtkTreeModelFilterClass._gtk_reserved2$VH;
+        return constants$2427.const$3;
     }
     /**
      * Getter for field:
@@ -308,7 +220,7 @@ public class _GtkTreeModelFilterClass {
      * }
      */
     public static MemorySegment _gtk_reserved2$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_GtkTreeModelFilterClass._gtk_reserved2$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$2427.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -317,24 +229,17 @@ public class _GtkTreeModelFilterClass {
      * }
      */
     public static void _gtk_reserved2$set(MemorySegment seg, MemorySegment x) {
-        _GtkTreeModelFilterClass._gtk_reserved2$VH.set(seg, x);
+        constants$2427.const$3.set(seg, x);
     }
     public static MemorySegment _gtk_reserved2$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_GtkTreeModelFilterClass._gtk_reserved2$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$2427.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void _gtk_reserved2$set(MemorySegment seg, long index, MemorySegment x) {
-        _GtkTreeModelFilterClass._gtk_reserved2$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$2427.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    public static _gtk_reserved2 _gtk_reserved2(MemorySegment segment, SegmentScope scope) {
+    public static _gtk_reserved2 _gtk_reserved2(MemorySegment segment, Arena scope) {
         return _gtk_reserved2.ofAddress(_gtk_reserved2$get(segment), scope);
     }
-    static final FunctionDescriptor _gtk_reserved3$FUNC = FunctionDescriptor.ofVoid();
-    static final FunctionDescriptor _gtk_reserved3_UP$FUNC = FunctionDescriptor.ofVoid();
-    static final MethodHandle _gtk_reserved3_UP$MH = RuntimeHelper.upcallHandle(_gtk_reserved3.class, "apply", _GtkTreeModelFilterClass._gtk_reserved3_UP$FUNC);
-    static final FunctionDescriptor _gtk_reserved3_DOWN$FUNC = FunctionDescriptor.ofVoid();
-    static final MethodHandle _gtk_reserved3_DOWN$MH = RuntimeHelper.downcallHandle(
-        _GtkTreeModelFilterClass._gtk_reserved3_DOWN$FUNC
-    );
     /**
      * {@snippet :
  * void (*_gtk_reserved3)();
@@ -343,14 +248,14 @@ public class _GtkTreeModelFilterClass {
     public interface _gtk_reserved3 {
 
         void apply();
-        static MemorySegment allocate(_gtk_reserved3 fi, SegmentScope scope) {
-            return RuntimeHelper.upcallStub(_GtkTreeModelFilterClass._gtk_reserved3_UP$MH, fi, _GtkTreeModelFilterClass._gtk_reserved3$FUNC, scope);
+        static MemorySegment allocate(_gtk_reserved3 fi, Arena scope) {
+            return RuntimeHelper.upcallStub(constants$2427.const$4, fi, constants$7.const$5, scope);
         }
-        static _gtk_reserved3 ofAddress(MemorySegment addr, SegmentScope scope) {
-            MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+        static _gtk_reserved3 ofAddress(MemorySegment addr, Arena arena) {
+            MemorySegment symbol = addr.reinterpret(arena, null);
             return () -> {
                 try {
-                    _GtkTreeModelFilterClass._gtk_reserved3_DOWN$MH.invokeExact(symbol);
+                    constants$64.const$1.invokeExact(symbol);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -358,9 +263,8 @@ public class _GtkTreeModelFilterClass {
         }
     }
 
-    static final VarHandle _gtk_reserved3$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_gtk_reserved3"));
     public static VarHandle _gtk_reserved3$VH() {
-        return _GtkTreeModelFilterClass._gtk_reserved3$VH;
+        return constants$2427.const$5;
     }
     /**
      * Getter for field:
@@ -369,7 +273,7 @@ public class _GtkTreeModelFilterClass {
      * }
      */
     public static MemorySegment _gtk_reserved3$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_GtkTreeModelFilterClass._gtk_reserved3$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$2427.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -378,24 +282,17 @@ public class _GtkTreeModelFilterClass {
      * }
      */
     public static void _gtk_reserved3$set(MemorySegment seg, MemorySegment x) {
-        _GtkTreeModelFilterClass._gtk_reserved3$VH.set(seg, x);
+        constants$2427.const$5.set(seg, x);
     }
     public static MemorySegment _gtk_reserved3$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_GtkTreeModelFilterClass._gtk_reserved3$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$2427.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void _gtk_reserved3$set(MemorySegment seg, long index, MemorySegment x) {
-        _GtkTreeModelFilterClass._gtk_reserved3$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$2427.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    public static _gtk_reserved3 _gtk_reserved3(MemorySegment segment, SegmentScope scope) {
+    public static _gtk_reserved3 _gtk_reserved3(MemorySegment segment, Arena scope) {
         return _gtk_reserved3.ofAddress(_gtk_reserved3$get(segment), scope);
     }
-    static final FunctionDescriptor _gtk_reserved4$FUNC = FunctionDescriptor.ofVoid();
-    static final FunctionDescriptor _gtk_reserved4_UP$FUNC = FunctionDescriptor.ofVoid();
-    static final MethodHandle _gtk_reserved4_UP$MH = RuntimeHelper.upcallHandle(_gtk_reserved4.class, "apply", _GtkTreeModelFilterClass._gtk_reserved4_UP$FUNC);
-    static final FunctionDescriptor _gtk_reserved4_DOWN$FUNC = FunctionDescriptor.ofVoid();
-    static final MethodHandle _gtk_reserved4_DOWN$MH = RuntimeHelper.downcallHandle(
-        _GtkTreeModelFilterClass._gtk_reserved4_DOWN$FUNC
-    );
     /**
      * {@snippet :
  * void (*_gtk_reserved4)();
@@ -404,14 +301,14 @@ public class _GtkTreeModelFilterClass {
     public interface _gtk_reserved4 {
 
         void apply();
-        static MemorySegment allocate(_gtk_reserved4 fi, SegmentScope scope) {
-            return RuntimeHelper.upcallStub(_GtkTreeModelFilterClass._gtk_reserved4_UP$MH, fi, _GtkTreeModelFilterClass._gtk_reserved4$FUNC, scope);
+        static MemorySegment allocate(_gtk_reserved4 fi, Arena scope) {
+            return RuntimeHelper.upcallStub(constants$2428.const$0, fi, constants$7.const$5, scope);
         }
-        static _gtk_reserved4 ofAddress(MemorySegment addr, SegmentScope scope) {
-            MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+        static _gtk_reserved4 ofAddress(MemorySegment addr, Arena arena) {
+            MemorySegment symbol = addr.reinterpret(arena, null);
             return () -> {
                 try {
-                    _GtkTreeModelFilterClass._gtk_reserved4_DOWN$MH.invokeExact(symbol);
+                    constants$64.const$1.invokeExact(symbol);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -419,9 +316,8 @@ public class _GtkTreeModelFilterClass {
         }
     }
 
-    static final VarHandle _gtk_reserved4$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_gtk_reserved4"));
     public static VarHandle _gtk_reserved4$VH() {
-        return _GtkTreeModelFilterClass._gtk_reserved4$VH;
+        return constants$2428.const$1;
     }
     /**
      * Getter for field:
@@ -430,7 +326,7 @@ public class _GtkTreeModelFilterClass {
      * }
      */
     public static MemorySegment _gtk_reserved4$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_GtkTreeModelFilterClass._gtk_reserved4$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$2428.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -439,15 +335,15 @@ public class _GtkTreeModelFilterClass {
      * }
      */
     public static void _gtk_reserved4$set(MemorySegment seg, MemorySegment x) {
-        _GtkTreeModelFilterClass._gtk_reserved4$VH.set(seg, x);
+        constants$2428.const$1.set(seg, x);
     }
     public static MemorySegment _gtk_reserved4$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_GtkTreeModelFilterClass._gtk_reserved4$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$2428.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void _gtk_reserved4$set(MemorySegment seg, long index, MemorySegment x) {
-        _GtkTreeModelFilterClass._gtk_reserved4$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$2428.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    public static _gtk_reserved4 _gtk_reserved4(MemorySegment segment, SegmentScope scope) {
+    public static _gtk_reserved4 _gtk_reserved4(MemorySegment segment, Arena scope) {
         return _gtk_reserved4.ofAddress(_gtk_reserved4$get(segment), scope);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
@@ -455,7 +351,7 @@ public class _GtkTreeModelFilterClass {
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
 }
 
 
