@@ -2,9 +2,11 @@
 
 package org.purejava.appindicator;
 
+import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
 import java.lang.foreign.*;
-
+import static java.lang.foreign.ValueLayout.*;
 /**
  * {@snippet :
  * struct _IO_FILE {
@@ -24,17 +26,17 @@ import java.lang.foreign.*;
  *     struct _IO_FILE* _chain;
  *     int _fileno;
  *     int _flags2;
- *     __off_t _old_offset;
+ *     long _old_offset;
  *     unsigned short _cur_column;
  *     signed char _vtable_offset;
  *     char _shortbuf[1];
- *     _IO_lock_t* _lock;
- *     __off64_t _offset;
+ *     void* _lock;
+ *     long _offset;
  *     struct _IO_codecvt* _codecvt;
  *     struct _IO_wide_data* _wide_data;
  *     struct _IO_FILE* _freeres_list;
  *     void* _freeres_buf;
- *     size_t __pad5;
+ *     unsigned long __pad5;
  *     int _mode;
  *     char _unused2[20];
  * };
@@ -42,45 +44,11 @@ import java.lang.foreign.*;
  */
 public class _IO_FILE {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_INT$LAYOUT.withName("_flags"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_POINTER$LAYOUT.withName("_IO_read_ptr"),
-        Constants$root.C_POINTER$LAYOUT.withName("_IO_read_end"),
-        Constants$root.C_POINTER$LAYOUT.withName("_IO_read_base"),
-        Constants$root.C_POINTER$LAYOUT.withName("_IO_write_base"),
-        Constants$root.C_POINTER$LAYOUT.withName("_IO_write_ptr"),
-        Constants$root.C_POINTER$LAYOUT.withName("_IO_write_end"),
-        Constants$root.C_POINTER$LAYOUT.withName("_IO_buf_base"),
-        Constants$root.C_POINTER$LAYOUT.withName("_IO_buf_end"),
-        Constants$root.C_POINTER$LAYOUT.withName("_IO_save_base"),
-        Constants$root.C_POINTER$LAYOUT.withName("_IO_backup_base"),
-        Constants$root.C_POINTER$LAYOUT.withName("_IO_save_end"),
-        Constants$root.C_POINTER$LAYOUT.withName("_markers"),
-        Constants$root.C_POINTER$LAYOUT.withName("_chain"),
-        Constants$root.C_INT$LAYOUT.withName("_fileno"),
-        Constants$root.C_INT$LAYOUT.withName("_flags2"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("_old_offset"),
-        Constants$root.C_SHORT$LAYOUT.withName("_cur_column"),
-        Constants$root.C_CHAR$LAYOUT.withName("_vtable_offset"),
-        MemoryLayout.sequenceLayout(1, Constants$root.C_CHAR$LAYOUT).withName("_shortbuf"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_POINTER$LAYOUT.withName("_lock"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("_offset"),
-        Constants$root.C_POINTER$LAYOUT.withName("_codecvt"),
-        Constants$root.C_POINTER$LAYOUT.withName("_wide_data"),
-        Constants$root.C_POINTER$LAYOUT.withName("_freeres_list"),
-        Constants$root.C_POINTER$LAYOUT.withName("_freeres_buf"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("__pad5"),
-        Constants$root.C_INT$LAYOUT.withName("_mode"),
-        MemoryLayout.sequenceLayout(20, Constants$root.C_CHAR$LAYOUT).withName("_unused2")
-    ).withName("_IO_FILE");
     public static MemoryLayout $LAYOUT() {
-        return _IO_FILE.$struct$LAYOUT;
+        return constants$1653.const$2;
     }
-    static final VarHandle _flags$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_flags"));
     public static VarHandle _flags$VH() {
-        return _IO_FILE._flags$VH;
+        return constants$1653.const$3;
     }
     /**
      * Getter for field:
@@ -89,7 +57,7 @@ public class _IO_FILE {
      * }
      */
     public static int _flags$get(MemorySegment seg) {
-        return (int)_IO_FILE._flags$VH.get(seg);
+        return (int)constants$1653.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -98,17 +66,16 @@ public class _IO_FILE {
      * }
      */
     public static void _flags$set(MemorySegment seg, int x) {
-        _IO_FILE._flags$VH.set(seg, x);
+        constants$1653.const$3.set(seg, x);
     }
     public static int _flags$get(MemorySegment seg, long index) {
-        return (int)_IO_FILE._flags$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$1653.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void _flags$set(MemorySegment seg, long index, int x) {
-        _IO_FILE._flags$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1653.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _IO_read_ptr$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_IO_read_ptr"));
     public static VarHandle _IO_read_ptr$VH() {
-        return _IO_FILE._IO_read_ptr$VH;
+        return constants$1653.const$4;
     }
     /**
      * Getter for field:
@@ -117,7 +84,7 @@ public class _IO_FILE {
      * }
      */
     public static MemorySegment _IO_read_ptr$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._IO_read_ptr$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1653.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -126,17 +93,16 @@ public class _IO_FILE {
      * }
      */
     public static void _IO_read_ptr$set(MemorySegment seg, MemorySegment x) {
-        _IO_FILE._IO_read_ptr$VH.set(seg, x);
+        constants$1653.const$4.set(seg, x);
     }
     public static MemorySegment _IO_read_ptr$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._IO_read_ptr$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1653.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void _IO_read_ptr$set(MemorySegment seg, long index, MemorySegment x) {
-        _IO_FILE._IO_read_ptr$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1653.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _IO_read_end$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_IO_read_end"));
     public static VarHandle _IO_read_end$VH() {
-        return _IO_FILE._IO_read_end$VH;
+        return constants$1653.const$5;
     }
     /**
      * Getter for field:
@@ -145,7 +111,7 @@ public class _IO_FILE {
      * }
      */
     public static MemorySegment _IO_read_end$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._IO_read_end$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1653.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -154,17 +120,16 @@ public class _IO_FILE {
      * }
      */
     public static void _IO_read_end$set(MemorySegment seg, MemorySegment x) {
-        _IO_FILE._IO_read_end$VH.set(seg, x);
+        constants$1653.const$5.set(seg, x);
     }
     public static MemorySegment _IO_read_end$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._IO_read_end$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1653.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void _IO_read_end$set(MemorySegment seg, long index, MemorySegment x) {
-        _IO_FILE._IO_read_end$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1653.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _IO_read_base$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_IO_read_base"));
     public static VarHandle _IO_read_base$VH() {
-        return _IO_FILE._IO_read_base$VH;
+        return constants$1654.const$0;
     }
     /**
      * Getter for field:
@@ -173,7 +138,7 @@ public class _IO_FILE {
      * }
      */
     public static MemorySegment _IO_read_base$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._IO_read_base$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1654.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -182,17 +147,16 @@ public class _IO_FILE {
      * }
      */
     public static void _IO_read_base$set(MemorySegment seg, MemorySegment x) {
-        _IO_FILE._IO_read_base$VH.set(seg, x);
+        constants$1654.const$0.set(seg, x);
     }
     public static MemorySegment _IO_read_base$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._IO_read_base$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1654.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void _IO_read_base$set(MemorySegment seg, long index, MemorySegment x) {
-        _IO_FILE._IO_read_base$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1654.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _IO_write_base$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_IO_write_base"));
     public static VarHandle _IO_write_base$VH() {
-        return _IO_FILE._IO_write_base$VH;
+        return constants$1654.const$1;
     }
     /**
      * Getter for field:
@@ -201,7 +165,7 @@ public class _IO_FILE {
      * }
      */
     public static MemorySegment _IO_write_base$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._IO_write_base$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1654.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -210,17 +174,16 @@ public class _IO_FILE {
      * }
      */
     public static void _IO_write_base$set(MemorySegment seg, MemorySegment x) {
-        _IO_FILE._IO_write_base$VH.set(seg, x);
+        constants$1654.const$1.set(seg, x);
     }
     public static MemorySegment _IO_write_base$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._IO_write_base$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1654.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void _IO_write_base$set(MemorySegment seg, long index, MemorySegment x) {
-        _IO_FILE._IO_write_base$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1654.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _IO_write_ptr$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_IO_write_ptr"));
     public static VarHandle _IO_write_ptr$VH() {
-        return _IO_FILE._IO_write_ptr$VH;
+        return constants$1654.const$2;
     }
     /**
      * Getter for field:
@@ -229,7 +192,7 @@ public class _IO_FILE {
      * }
      */
     public static MemorySegment _IO_write_ptr$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._IO_write_ptr$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1654.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -238,17 +201,16 @@ public class _IO_FILE {
      * }
      */
     public static void _IO_write_ptr$set(MemorySegment seg, MemorySegment x) {
-        _IO_FILE._IO_write_ptr$VH.set(seg, x);
+        constants$1654.const$2.set(seg, x);
     }
     public static MemorySegment _IO_write_ptr$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._IO_write_ptr$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1654.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void _IO_write_ptr$set(MemorySegment seg, long index, MemorySegment x) {
-        _IO_FILE._IO_write_ptr$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1654.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _IO_write_end$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_IO_write_end"));
     public static VarHandle _IO_write_end$VH() {
-        return _IO_FILE._IO_write_end$VH;
+        return constants$1654.const$3;
     }
     /**
      * Getter for field:
@@ -257,7 +219,7 @@ public class _IO_FILE {
      * }
      */
     public static MemorySegment _IO_write_end$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._IO_write_end$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1654.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -266,17 +228,16 @@ public class _IO_FILE {
      * }
      */
     public static void _IO_write_end$set(MemorySegment seg, MemorySegment x) {
-        _IO_FILE._IO_write_end$VH.set(seg, x);
+        constants$1654.const$3.set(seg, x);
     }
     public static MemorySegment _IO_write_end$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._IO_write_end$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1654.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void _IO_write_end$set(MemorySegment seg, long index, MemorySegment x) {
-        _IO_FILE._IO_write_end$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1654.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _IO_buf_base$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_IO_buf_base"));
     public static VarHandle _IO_buf_base$VH() {
-        return _IO_FILE._IO_buf_base$VH;
+        return constants$1654.const$4;
     }
     /**
      * Getter for field:
@@ -285,7 +246,7 @@ public class _IO_FILE {
      * }
      */
     public static MemorySegment _IO_buf_base$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._IO_buf_base$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1654.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -294,17 +255,16 @@ public class _IO_FILE {
      * }
      */
     public static void _IO_buf_base$set(MemorySegment seg, MemorySegment x) {
-        _IO_FILE._IO_buf_base$VH.set(seg, x);
+        constants$1654.const$4.set(seg, x);
     }
     public static MemorySegment _IO_buf_base$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._IO_buf_base$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1654.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void _IO_buf_base$set(MemorySegment seg, long index, MemorySegment x) {
-        _IO_FILE._IO_buf_base$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1654.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _IO_buf_end$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_IO_buf_end"));
     public static VarHandle _IO_buf_end$VH() {
-        return _IO_FILE._IO_buf_end$VH;
+        return constants$1654.const$5;
     }
     /**
      * Getter for field:
@@ -313,7 +273,7 @@ public class _IO_FILE {
      * }
      */
     public static MemorySegment _IO_buf_end$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._IO_buf_end$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1654.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -322,17 +282,16 @@ public class _IO_FILE {
      * }
      */
     public static void _IO_buf_end$set(MemorySegment seg, MemorySegment x) {
-        _IO_FILE._IO_buf_end$VH.set(seg, x);
+        constants$1654.const$5.set(seg, x);
     }
     public static MemorySegment _IO_buf_end$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._IO_buf_end$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1654.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void _IO_buf_end$set(MemorySegment seg, long index, MemorySegment x) {
-        _IO_FILE._IO_buf_end$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1654.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _IO_save_base$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_IO_save_base"));
     public static VarHandle _IO_save_base$VH() {
-        return _IO_FILE._IO_save_base$VH;
+        return constants$1655.const$0;
     }
     /**
      * Getter for field:
@@ -341,7 +300,7 @@ public class _IO_FILE {
      * }
      */
     public static MemorySegment _IO_save_base$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._IO_save_base$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1655.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -350,17 +309,16 @@ public class _IO_FILE {
      * }
      */
     public static void _IO_save_base$set(MemorySegment seg, MemorySegment x) {
-        _IO_FILE._IO_save_base$VH.set(seg, x);
+        constants$1655.const$0.set(seg, x);
     }
     public static MemorySegment _IO_save_base$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._IO_save_base$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1655.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void _IO_save_base$set(MemorySegment seg, long index, MemorySegment x) {
-        _IO_FILE._IO_save_base$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1655.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _IO_backup_base$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_IO_backup_base"));
     public static VarHandle _IO_backup_base$VH() {
-        return _IO_FILE._IO_backup_base$VH;
+        return constants$1655.const$1;
     }
     /**
      * Getter for field:
@@ -369,7 +327,7 @@ public class _IO_FILE {
      * }
      */
     public static MemorySegment _IO_backup_base$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._IO_backup_base$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1655.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -378,17 +336,16 @@ public class _IO_FILE {
      * }
      */
     public static void _IO_backup_base$set(MemorySegment seg, MemorySegment x) {
-        _IO_FILE._IO_backup_base$VH.set(seg, x);
+        constants$1655.const$1.set(seg, x);
     }
     public static MemorySegment _IO_backup_base$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._IO_backup_base$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1655.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void _IO_backup_base$set(MemorySegment seg, long index, MemorySegment x) {
-        _IO_FILE._IO_backup_base$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1655.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _IO_save_end$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_IO_save_end"));
     public static VarHandle _IO_save_end$VH() {
-        return _IO_FILE._IO_save_end$VH;
+        return constants$1655.const$2;
     }
     /**
      * Getter for field:
@@ -397,7 +354,7 @@ public class _IO_FILE {
      * }
      */
     public static MemorySegment _IO_save_end$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._IO_save_end$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1655.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -406,17 +363,16 @@ public class _IO_FILE {
      * }
      */
     public static void _IO_save_end$set(MemorySegment seg, MemorySegment x) {
-        _IO_FILE._IO_save_end$VH.set(seg, x);
+        constants$1655.const$2.set(seg, x);
     }
     public static MemorySegment _IO_save_end$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._IO_save_end$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1655.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void _IO_save_end$set(MemorySegment seg, long index, MemorySegment x) {
-        _IO_FILE._IO_save_end$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1655.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _markers$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_markers"));
     public static VarHandle _markers$VH() {
-        return _IO_FILE._markers$VH;
+        return constants$1655.const$3;
     }
     /**
      * Getter for field:
@@ -425,7 +381,7 @@ public class _IO_FILE {
      * }
      */
     public static MemorySegment _markers$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._markers$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1655.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -434,17 +390,16 @@ public class _IO_FILE {
      * }
      */
     public static void _markers$set(MemorySegment seg, MemorySegment x) {
-        _IO_FILE._markers$VH.set(seg, x);
+        constants$1655.const$3.set(seg, x);
     }
     public static MemorySegment _markers$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._markers$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1655.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void _markers$set(MemorySegment seg, long index, MemorySegment x) {
-        _IO_FILE._markers$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1655.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _chain$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_chain"));
     public static VarHandle _chain$VH() {
-        return _IO_FILE._chain$VH;
+        return constants$1655.const$4;
     }
     /**
      * Getter for field:
@@ -453,7 +408,7 @@ public class _IO_FILE {
      * }
      */
     public static MemorySegment _chain$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._chain$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1655.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -462,17 +417,16 @@ public class _IO_FILE {
      * }
      */
     public static void _chain$set(MemorySegment seg, MemorySegment x) {
-        _IO_FILE._chain$VH.set(seg, x);
+        constants$1655.const$4.set(seg, x);
     }
     public static MemorySegment _chain$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._chain$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1655.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void _chain$set(MemorySegment seg, long index, MemorySegment x) {
-        _IO_FILE._chain$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1655.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _fileno$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_fileno"));
     public static VarHandle _fileno$VH() {
-        return _IO_FILE._fileno$VH;
+        return constants$1655.const$5;
     }
     /**
      * Getter for field:
@@ -481,7 +435,7 @@ public class _IO_FILE {
      * }
      */
     public static int _fileno$get(MemorySegment seg) {
-        return (int)_IO_FILE._fileno$VH.get(seg);
+        return (int)constants$1655.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -490,17 +444,16 @@ public class _IO_FILE {
      * }
      */
     public static void _fileno$set(MemorySegment seg, int x) {
-        _IO_FILE._fileno$VH.set(seg, x);
+        constants$1655.const$5.set(seg, x);
     }
     public static int _fileno$get(MemorySegment seg, long index) {
-        return (int)_IO_FILE._fileno$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$1655.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void _fileno$set(MemorySegment seg, long index, int x) {
-        _IO_FILE._fileno$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1655.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _flags2$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_flags2"));
     public static VarHandle _flags2$VH() {
-        return _IO_FILE._flags2$VH;
+        return constants$1656.const$0;
     }
     /**
      * Getter for field:
@@ -509,7 +462,7 @@ public class _IO_FILE {
      * }
      */
     public static int _flags2$get(MemorySegment seg) {
-        return (int)_IO_FILE._flags2$VH.get(seg);
+        return (int)constants$1656.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -518,45 +471,43 @@ public class _IO_FILE {
      * }
      */
     public static void _flags2$set(MemorySegment seg, int x) {
-        _IO_FILE._flags2$VH.set(seg, x);
+        constants$1656.const$0.set(seg, x);
     }
     public static int _flags2$get(MemorySegment seg, long index) {
-        return (int)_IO_FILE._flags2$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$1656.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void _flags2$set(MemorySegment seg, long index, int x) {
-        _IO_FILE._flags2$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1656.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _old_offset$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_old_offset"));
     public static VarHandle _old_offset$VH() {
-        return _IO_FILE._old_offset$VH;
+        return constants$1656.const$1;
     }
     /**
      * Getter for field:
      * {@snippet :
-     * __off_t _old_offset;
+     * long _old_offset;
      * }
      */
     public static long _old_offset$get(MemorySegment seg) {
-        return (long)_IO_FILE._old_offset$VH.get(seg);
+        return (long)constants$1656.const$1.get(seg);
     }
     /**
      * Setter for field:
      * {@snippet :
-     * __off_t _old_offset;
+     * long _old_offset;
      * }
      */
     public static void _old_offset$set(MemorySegment seg, long x) {
-        _IO_FILE._old_offset$VH.set(seg, x);
+        constants$1656.const$1.set(seg, x);
     }
     public static long _old_offset$get(MemorySegment seg, long index) {
-        return (long)_IO_FILE._old_offset$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$1656.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void _old_offset$set(MemorySegment seg, long index, long x) {
-        _IO_FILE._old_offset$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1656.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _cur_column$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_cur_column"));
     public static VarHandle _cur_column$VH() {
-        return _IO_FILE._cur_column$VH;
+        return constants$1656.const$2;
     }
     /**
      * Getter for field:
@@ -565,7 +516,7 @@ public class _IO_FILE {
      * }
      */
     public static short _cur_column$get(MemorySegment seg) {
-        return (short)_IO_FILE._cur_column$VH.get(seg);
+        return (short)constants$1656.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -574,17 +525,16 @@ public class _IO_FILE {
      * }
      */
     public static void _cur_column$set(MemorySegment seg, short x) {
-        _IO_FILE._cur_column$VH.set(seg, x);
+        constants$1656.const$2.set(seg, x);
     }
     public static short _cur_column$get(MemorySegment seg, long index) {
-        return (short)_IO_FILE._cur_column$VH.get(seg.asSlice(index*sizeof()));
+        return (short)constants$1656.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void _cur_column$set(MemorySegment seg, long index, short x) {
-        _IO_FILE._cur_column$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1656.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _vtable_offset$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_vtable_offset"));
     public static VarHandle _vtable_offset$VH() {
-        return _IO_FILE._vtable_offset$VH;
+        return constants$1656.const$3;
     }
     /**
      * Getter for field:
@@ -593,7 +543,7 @@ public class _IO_FILE {
      * }
      */
     public static byte _vtable_offset$get(MemorySegment seg) {
-        return (byte)_IO_FILE._vtable_offset$VH.get(seg);
+        return (byte)constants$1656.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -602,76 +552,73 @@ public class _IO_FILE {
      * }
      */
     public static void _vtable_offset$set(MemorySegment seg, byte x) {
-        _IO_FILE._vtable_offset$VH.set(seg, x);
+        constants$1656.const$3.set(seg, x);
     }
     public static byte _vtable_offset$get(MemorySegment seg, long index) {
-        return (byte)_IO_FILE._vtable_offset$VH.get(seg.asSlice(index*sizeof()));
+        return (byte)constants$1656.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void _vtable_offset$set(MemorySegment seg, long index, byte x) {
-        _IO_FILE._vtable_offset$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1656.const$3.set(seg.asSlice(index*sizeof()), x);
     }
     public static MemorySegment _shortbuf$slice(MemorySegment seg) {
         return seg.asSlice(131, 1);
     }
-    static final VarHandle _lock$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_lock"));
     public static VarHandle _lock$VH() {
-        return _IO_FILE._lock$VH;
+        return constants$1656.const$4;
     }
     /**
      * Getter for field:
      * {@snippet :
-     * _IO_lock_t* _lock;
+     * void* _lock;
      * }
      */
     public static MemorySegment _lock$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._lock$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1656.const$4.get(seg);
     }
     /**
      * Setter for field:
      * {@snippet :
-     * _IO_lock_t* _lock;
+     * void* _lock;
      * }
      */
     public static void _lock$set(MemorySegment seg, MemorySegment x) {
-        _IO_FILE._lock$VH.set(seg, x);
+        constants$1656.const$4.set(seg, x);
     }
     public static MemorySegment _lock$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._lock$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1656.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void _lock$set(MemorySegment seg, long index, MemorySegment x) {
-        _IO_FILE._lock$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1656.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _offset$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_offset"));
     public static VarHandle _offset$VH() {
-        return _IO_FILE._offset$VH;
+        return constants$1656.const$5;
     }
     /**
      * Getter for field:
      * {@snippet :
-     * __off64_t _offset;
+     * long _offset;
      * }
      */
     public static long _offset$get(MemorySegment seg) {
-        return (long)_IO_FILE._offset$VH.get(seg);
+        return (long)constants$1656.const$5.get(seg);
     }
     /**
      * Setter for field:
      * {@snippet :
-     * __off64_t _offset;
+     * long _offset;
      * }
      */
     public static void _offset$set(MemorySegment seg, long x) {
-        _IO_FILE._offset$VH.set(seg, x);
+        constants$1656.const$5.set(seg, x);
     }
     public static long _offset$get(MemorySegment seg, long index) {
-        return (long)_IO_FILE._offset$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$1656.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void _offset$set(MemorySegment seg, long index, long x) {
-        _IO_FILE._offset$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1656.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _codecvt$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_codecvt"));
     public static VarHandle _codecvt$VH() {
-        return _IO_FILE._codecvt$VH;
+        return constants$1657.const$0;
     }
     /**
      * Getter for field:
@@ -680,7 +627,7 @@ public class _IO_FILE {
      * }
      */
     public static MemorySegment _codecvt$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._codecvt$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1657.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -689,17 +636,16 @@ public class _IO_FILE {
      * }
      */
     public static void _codecvt$set(MemorySegment seg, MemorySegment x) {
-        _IO_FILE._codecvt$VH.set(seg, x);
+        constants$1657.const$0.set(seg, x);
     }
     public static MemorySegment _codecvt$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._codecvt$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1657.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void _codecvt$set(MemorySegment seg, long index, MemorySegment x) {
-        _IO_FILE._codecvt$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1657.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _wide_data$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_wide_data"));
     public static VarHandle _wide_data$VH() {
-        return _IO_FILE._wide_data$VH;
+        return constants$1657.const$1;
     }
     /**
      * Getter for field:
@@ -708,7 +654,7 @@ public class _IO_FILE {
      * }
      */
     public static MemorySegment _wide_data$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._wide_data$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1657.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -717,17 +663,16 @@ public class _IO_FILE {
      * }
      */
     public static void _wide_data$set(MemorySegment seg, MemorySegment x) {
-        _IO_FILE._wide_data$VH.set(seg, x);
+        constants$1657.const$1.set(seg, x);
     }
     public static MemorySegment _wide_data$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._wide_data$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1657.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void _wide_data$set(MemorySegment seg, long index, MemorySegment x) {
-        _IO_FILE._wide_data$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1657.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _freeres_list$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_freeres_list"));
     public static VarHandle _freeres_list$VH() {
-        return _IO_FILE._freeres_list$VH;
+        return constants$1657.const$2;
     }
     /**
      * Getter for field:
@@ -736,7 +681,7 @@ public class _IO_FILE {
      * }
      */
     public static MemorySegment _freeres_list$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._freeres_list$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1657.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -745,17 +690,16 @@ public class _IO_FILE {
      * }
      */
     public static void _freeres_list$set(MemorySegment seg, MemorySegment x) {
-        _IO_FILE._freeres_list$VH.set(seg, x);
+        constants$1657.const$2.set(seg, x);
     }
     public static MemorySegment _freeres_list$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._freeres_list$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1657.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void _freeres_list$set(MemorySegment seg, long index, MemorySegment x) {
-        _IO_FILE._freeres_list$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1657.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _freeres_buf$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_freeres_buf"));
     public static VarHandle _freeres_buf$VH() {
-        return _IO_FILE._freeres_buf$VH;
+        return constants$1657.const$3;
     }
     /**
      * Getter for field:
@@ -764,7 +708,7 @@ public class _IO_FILE {
      * }
      */
     public static MemorySegment _freeres_buf$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._freeres_buf$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1657.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -773,45 +717,43 @@ public class _IO_FILE {
      * }
      */
     public static void _freeres_buf$set(MemorySegment seg, MemorySegment x) {
-        _IO_FILE._freeres_buf$VH.set(seg, x);
+        constants$1657.const$3.set(seg, x);
     }
     public static MemorySegment _freeres_buf$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)_IO_FILE._freeres_buf$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1657.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void _freeres_buf$set(MemorySegment seg, long index, MemorySegment x) {
-        _IO_FILE._freeres_buf$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1657.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle __pad5$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("__pad5"));
     public static VarHandle __pad5$VH() {
-        return _IO_FILE.__pad5$VH;
+        return constants$1657.const$4;
     }
     /**
      * Getter for field:
      * {@snippet :
-     * size_t __pad5;
+     * unsigned long __pad5;
      * }
      */
     public static long __pad5$get(MemorySegment seg) {
-        return (long)_IO_FILE.__pad5$VH.get(seg);
+        return (long)constants$1657.const$4.get(seg);
     }
     /**
      * Setter for field:
      * {@snippet :
-     * size_t __pad5;
+     * unsigned long __pad5;
      * }
      */
     public static void __pad5$set(MemorySegment seg, long x) {
-        _IO_FILE.__pad5$VH.set(seg, x);
+        constants$1657.const$4.set(seg, x);
     }
     public static long __pad5$get(MemorySegment seg, long index) {
-        return (long)_IO_FILE.__pad5$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$1657.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void __pad5$set(MemorySegment seg, long index, long x) {
-        _IO_FILE.__pad5$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1657.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle _mode$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("_mode"));
     public static VarHandle _mode$VH() {
-        return _IO_FILE._mode$VH;
+        return constants$1657.const$5;
     }
     /**
      * Getter for field:
@@ -820,7 +762,7 @@ public class _IO_FILE {
      * }
      */
     public static int _mode$get(MemorySegment seg) {
-        return (int)_IO_FILE._mode$VH.get(seg);
+        return (int)constants$1657.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -829,13 +771,13 @@ public class _IO_FILE {
      * }
      */
     public static void _mode$set(MemorySegment seg, int x) {
-        _IO_FILE._mode$VH.set(seg, x);
+        constants$1657.const$5.set(seg, x);
     }
     public static int _mode$get(MemorySegment seg, long index) {
-        return (int)_IO_FILE._mode$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$1657.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void _mode$set(MemorySegment seg, long index, int x) {
-        _IO_FILE._mode$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1657.const$5.set(seg.asSlice(index*sizeof()), x);
     }
     public static MemorySegment _unused2$slice(MemorySegment seg) {
         return seg.asSlice(196, 20);
@@ -845,7 +787,7 @@ public class _IO_FILE {
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
 }
 
 
