@@ -2,8 +2,11 @@
 
 package org.purejava.appindicator;
 
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
 import java.lang.foreign.*;
-
+import static java.lang.foreign.ValueLayout.*;
 /**
  * {@snippet :
  * void (*pthread_atfork$__prepare)();
@@ -12,14 +15,14 @@ import java.lang.foreign.*;
 public interface pthread_atfork$__prepare {
 
     void apply();
-    static MemorySegment allocate(pthread_atfork$__prepare fi, SegmentScope scope) {
-        return RuntimeHelper.upcallStub(constants$373.pthread_atfork$__prepare_UP$MH, fi, constants$373.pthread_atfork$__prepare$FUNC, scope);
+    static MemorySegment allocate(pthread_atfork$__prepare fi, Arena scope) {
+        return RuntimeHelper.upcallStub(constants$536.const$1, fi, constants$7.const$5, scope);
     }
-    static pthread_atfork$__prepare ofAddress(MemorySegment addr, SegmentScope scope) {
-        MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+    static pthread_atfork$__prepare ofAddress(MemorySegment addr, Arena arena) {
+        MemorySegment symbol = addr.reinterpret(arena, null);
         return () -> {
             try {
-                constants$373.pthread_atfork$__prepare_DOWN$MH.invokeExact(symbol);
+                constants$64.const$1.invokeExact(symbol);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
